--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -32,7 +32,7 @@ jobs:
       
       - name: Configure
         run: |
-          sudo pip install  jupyterlab  notebook rise
+          sudo pip install  jupyterlab  notebook RISE
           sudo rm -rf ./docs/*
           make -B docs
       - name: Setup Pages
